--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,3 +1,7 @@
+---
+import Background from "../components/Background.astro";
+---
+
 <!doctype html>
 <html lang="en">
 	<head>
@@ -8,15 +12,19 @@
 		<title>Astro Basics</title>
 	</head>
 	<body>
+		<Background />
 		<slot />
 	</body>
 </html>
 
 <style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
+	html {
+		scroll-behavior: smooth;
+	}
+
+	@media (prefers-reduced-motion: reduce) {
+		html {
+			scroll-behavior: auto;
+		}
 	}
 </style>
