--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,27 +1,112 @@
+---
+import ThemeToggle from "./ThemeToggle.astro";
+
+const navItems = [
+    {
+        title: "D'accueil",
+        label: "daccueil",
+        url: "/",
+    },
+    {
+        title: "A propos de moi",
+        label: "sur-moi",
+        url: "/sur-moi",
+    },
+    {
+        title: "Cours",
+        label: "cours",
+        url: "/cours",
+    },
+    {
+        title: "Contactez-nous",
+        label: "contactez",
+        url: "/contactez",
+    },
+];
+---
+
 <header
-    class="sticky z-10 top-2
-    border border-[#ebebeb]/80
-    dark:border-[#2e2e2e]/80 max-w-xl mx-auto
-    bg-[#ffffff]/80 dark:bg-[#0a0a0a]/80
-    backdrop-blur shadow-lg p-2 md:p-3 rounded-md"
+    class="fixed top-0 z-10 flex items-center justify-center w-full mt-2 p-2 md:p-3 mx-auto"
 >
     <nav
-        class="flex gap-5 md:gap-8 justify-center items-center text-sm md:text-base"
+        class="flex px-4 py-2 text-sm font-medium rounded-full dark:text-gray-200 justify-center items-center"
     >
-        <ul class="flex items-center gap-5 md:gap-8">
-            <li class="hover:text-[#0068d6] dark:hover:text-[#52a8ff]">
-                <a href="#inicio">Inicio</a>
-            </li>
-
-            <li class="hover:text-[#0068d6] dark:hover:text-[#52a8ff]">
-                <a href="#profesional">¿Por que aprender Español?</a>
-            </li>
-            <li class="hover:text-[#0068d6] dark:hover:text-[#52a8ff]">
-                <a href="#cursos">Cursos</a>
-            </li>
-            <li class="hover:text-[#0068d6] dark:hover:text-[#52a8ff]">
-                <a href="#formacion">Contacto</a>
-            </li>
-        </ul>
+        {
+            navItems.map((link) => (
+                <a
+                    class="relative block px-6 py-2 transition hover:text-yellowSecondary dark:hover:text-yellowSecondary "
+                    aria-label={link.label}
+                    href={link.url}
+                >
+                    {link.title}
+                </a>
+            ))
+        }
+        <ThemeToggle />
     </nav>
 </header>
+
+<script>
+    document.addEventListener("astro:page-load", () => {
+        const sections = document.querySelectorAll("section");
+        const navItems = document.querySelectorAll("header nav a");
+
+        const callback = (entries: any[]) => {
+            entries.forEach((entry) => {
+                if (entry.isIntersecting) {
+                    navItems.forEach((item) => {
+                        if (
+                            item.getAttribute("aria-label") == entry.target.id
+                        ) {
+                            item.classList.add("text-blue-500");
+                        } else {
+                            item.classList.remove("text-blue-500");
+                        }
+                    });
+                }
+            });
+        };
+
+        const observer = new IntersectionObserver(callback, {
+            root: null,
+            rootMargin: "0px",
+            threshold: 0.3,
+        });
+
+        sections.forEach((section) => {
+            observer.observe(section);
+        });
+
+        // Cleanup function
+        document.onvisibilitychange = () => {
+            if (document.visibilityState === "hidden") {
+                observer.disconnect();
+            } else {
+                sections.forEach((section) => {
+                    observer.observe(section);
+                });
+            }
+        };
+    });
+</script>
+
+<style>
+    nav {
+        animation: nav-shadown 1s linear both;
+        animation-timeline: scroll();
+        animation-range: 0 100px;
+    }
+
+    nav {
+        @apply dark:bg-brownDark bg-white/50;
+    }
+
+    @keyframes nav-shadown {
+        0% {
+            @apply dark:bg-gray-800/0 bg-white/0;
+        }
+        to {
+            @apply shadow-lg ring-1 backdrop-blur ring-white/10;
+        }
+    }
+</style>
