--- a/src/components/Timeline.astro
+++ b/src/components/Timeline.astro
@@ -9,12 +9,14 @@ const { items } = Astro.props;
     {
         items.map((section) => (
             <div class="">
-                <h3 class="font-semibold text-3xl">{section.titulo}</h3>
-                <ol class="relative border-l border-gray-200 dark:border-gray-700">
+                <h3 class="font-semibold text-3xl text-grayDark dark:text-white">
+                    {section.titulo}
+                </h3>
+                <ol class="relative border-l border-gray-200 dark:border-white">
                     {section.secciones.map((item) => (
                         <li class="mb-10 ms-4">
-                            <div class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -left-1.5 border border-white dark:border-gray-900 dark:bg-gray-700" />
-                            <time class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">
+                            <div class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -left-1.5 border border-white dark:border-white dark:bg-white/90" />
+                            <time class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-white">
                                 {item.time}
                             </time>
                             <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
