--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import Background from "../components/Background.astro";
+import Footer from "../components/Footer.astro";
 import Header from "../components/Header.astro";
 import Welcome from "../components/Welcome.astro";
 import Layout from "../layouts/Layout.astro";
@@ -7,6 +8,5 @@ import Layout from "../layouts/Layout.astro";
 
 <!-- Titulo para el SEO -->
 <Layout>
-	<Header />
 	<Welcome />
 </Layout>
