--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -1,5 +1,5 @@
 ---
-import Testimonios from "./Testimonios.astro";
+import Testimonios from "./Testimonios.jsx";
 import BigSection from "./BigSection.astro";
 import Timeline from "./Timeline.astro";
 import IconLink from "./IconLink.astro";
@@ -127,12 +127,11 @@ const carouselData = [
 				src="/images/video.mp4"
 				autoplay
 				loop
-				muted
 			>
 			</video>
 		</div>
 
-		<BigSection id="caracteristicas">
+		<BigSection id="caracteristicas" class="max-w-7xl">
 			<div class="w-full mx-auto max-w-7xl mt-12 mb-6">
 				<h3
 					class="text-center text-4xl font-semibold text-yellowSecondary"
@@ -145,7 +144,7 @@ const carouselData = [
 					<img
 						src="/images/IMG_20210426_135106_937.jpg"
 						alt="Perfil"
-						class="object-cover img-instructor rounded-md px-12"
+						class="object-cover rounded-md px-12"
 					/>
 				</div>
 				<div
@@ -153,67 +152,62 @@ const carouselData = [
 				>
 					{
 						caracteristicas.map((caracteristica, index) => (
-							<div class=" flex flex-col items-start rounded-xl bg-white px-1 py-2 shadow-lg transition-transform hover:scale-105 hover:shadow-xl">
-								<div class="flex items-center gap-4  px-6">
-									<caracteristica.icon class="w-8 h-8 text-yellowSecondary" />
-									<p class="h5 font-bold text-brownDark">
-										{caracteristica.titulo}
-									</p>
-								</div>
-								<div class="mt-4 space-y-1 w-full">
-									{caracteristica.descripcion.map(
-										(desc, idx) => (
-											<div
-												id={`accordion-collapse-${index}-${idx}`}
-												data-accordion="collapse"
-												class="w-full"
-											>
-												<h2
-													class=""
-													id={`accordion-collapse-heading-${index}-${idx}`}
-												>
-													<button
-														type="button"
-														class="text-sm flex items-start  w-full px-5 py-2 font-medium text-left text-grayMedium gap-3 justify-between"
-														data-accordion-target={`#accordion-collapse-body-${index}-${idx}`}
-														aria-expanded="false"
-														aria-controls={`accordion-collapse-body-${index}-${idx}`}
-													>
-														<span>
-															{desc.titulo}
-														</span>
-														<svg
-															data-accordion-icon
-															class="w-3 h-3 rotate-180 shrink-0"
-															aria-hidden="true"
-															xmlns="http://www.w3.org/2000/svg"
-															fill="none"
-															viewBox="0 0 10 6"
-														>
-															<path
-																stroke="currentColor"
-																stroke-linecap="round"
-																stroke-linejoin="round"
-																stroke-width="2"
-																d="M9 5 5 1 1 5"
-															/>
-														</svg>
-													</button>
-												</h2>
-												<div
-													id={`accordion-collapse-body-${index}-${idx}`}
-													class="hidden"
-													aria-labelledby={`accordion-collapse-heading-${index}-${idx}`}
-												>
-													<div class="px-3 py-2 ">
-														<p class="text-xs text-stoneLight">
-															{desc.detalle}
-														</p>
-													</div>
+							<div
+								id={`accordion-collapse-${index}`}
+								data-accordion="collapse"
+								class="w-full"
+							>
+								<h2 id={`accordion-collapse-heading-${index}`}>
+									<button
+										type="button"
+										class="flex items-center justify-between w-full p-5 font-medium rtl:text-right text-gray-500 border border-gray-200 rounded-t-xl focus:ring-2 focus:ring-gray-100 dark:focus:ring-gray-800 dark:border-gray-700 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-800 gap-3 transition duration-300 ease-in-out"
+										data-accordion-target={`#accordion-collapse-body-${index}`}
+										aria-expanded="false"
+										aria-controls={`accordion-collapse-body-${index}`}
+									>
+										<div class="flex items-center gap-2">
+											<caracteristica.icon class="w-8 h-8 text-yellowSecondary" />
+											<span class="text-left">
+												{caracteristica.titulo}
+											</span>
+										</div>
+										<svg
+											data-accordion-icon
+											class="w-3 h-3 rotate-180 shrink-0"
+											aria-hidden="true"
+											xmlns="http://www.w3.org/2000/svg"
+											fill="none"
+											viewBox="0 0 10 6"
+										>
+											<path
+												stroke="currentColor"
+												stroke-linecap="round"
+												stroke-linejoin="round"
+												stroke-width="2"
+												d="M9 5 5 1 1 5"
+											/>
+										</svg>
+									</button>
+								</h2>
+								<div
+									id={`accordion-collapse-body-${index}`}
+									class="hidden"
+									aria-labelledby={`accordion-collapse-heading-${index}`}
+								>
+									<div class="bg-white px-6 py-4 space-y-2">
+										{caracteristica.descripcion.map(
+											(desc) => (
+												<div class="px-3 py-2">
+													<h5 class="text-base font-semibold text-stoneLight text-left">
+														{desc.titulo}
+													</h5>
+													<p class="text-sm text-stoneLight text-left">
+														{desc.detalle}
+													</p>
 												</div>
-											</div>
-										),
-									)}
+											),
+										)}
+									</div>
 								</div>
 							</div>
 						))
