--- a/src/pages/contactez.astro
+++ b/src/pages/contactez.astro
@@ -1,5 +1,138 @@
 ---
+import BigSection from "../components/BigSection.astro";
+import ContactForm from "../components/FormContact";
 import Layout from "../layouts/Layout.astro";
+import Location from "../../public/iconos/Location.astro";
+import PhoneIcon from "../../public/iconos/PhoneIcon.astro";
+import ClockIcon from "../../public/iconos/ClockIcon.astro";
 ---
 
-<Layout />
+<>
+    <Layout>
+        <BigSection class="max-w-7xl">
+            <div
+                class="space-y-4 sm:grid sm:grid-cols-2 lg:grid-cols-4 sm:gap-4 xl:gap-8 sm:space-y-0 md:mt-12"
+            >
+                <a
+                    href="#"
+                    class="block px-8 py-4 text-center bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-700 dark:border-gray-600 hover:shadow-lg dark:hover:shadow-lg-light"
+                >
+                    <div class="flex justify-center">
+                        <Location class="h-12" />
+                    </div>
+                    <h3
+                        class="font-semibold text-2xl text-grayDark dark:text-white mt-3.5"
+                    >
+                        Direccion:
+                    </h3>
+                    <h4
+                        class="font-normal text-xl text-grayDark dark:text-white mt-3.5"
+                    >
+                        Urb. Lusdicn sdoicj 546 - A
+                    </h4>
+                </a>
+                <a
+                    href="#"
+                    class="block px-8 py-4 text-center bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-700 dark:border-gray-600 hover:shadow-lg dark:hover:shadow-lg-light"
+                >
+                    <div class="flex justify-center">
+                        <PhoneIcon class="h-12" />
+                    </div>
+                    <h3
+                        class="font-semibold text-2xl text-grayDark dark:text-white mt-3.5"
+                    >
+                        Celular:
+                    </h3>
+                    <h4
+                        class="font-normal text-xl text-grayDark dark:text-white mt-3.5"
+                    >
+                        999 999 999
+                    </h4>
+                </a>
+                <a
+                    href="#"
+                    class="col-span-2 block px-8 py-4 text-center bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-700 dark:border-gray-600 hover:shadow-lg dark:hover:shadow-lg-light"
+                >
+                    <div class="flex justify-center">
+                        <ClockIcon class="h-12" />
+                    </div>
+                    <div class="flex gap-2 gap-x-4">
+                        <div class="flex flex-col">
+                            <h3
+                                class="font-semibold text-2xl text-grayDark dark:text-white mt-3.5"
+                            >
+                                Lunes:
+                            </h3>
+                            <h4
+                                class="font-normal text-xl text-grayDark dark:text-white mt-3.5"
+                            >
+                                9:00–17:00
+                            </h4>
+                        </div>
+                        <div class="flex flex-col">
+                            <h3
+                                class="font-semibold text-2xl text-grayDark dark:text-white mt-3.5"
+                            >
+                                Martes:
+                            </h3>
+                            <h4
+                                class="font-normal text-xl text-grayDark dark:text-white mt-3.5"
+                            >
+                                9:30–20:00
+                            </h4>
+                        </div>
+                        <div class="flex flex-col">
+                            <h3
+                                class="font-semibold text-2xl text-grayDark dark:text-white mt-3.5"
+                            >
+                                Miércoles:
+                            </h3>
+                            <h4
+                                class="font-normal text-xl text-grayDark dark:text-white mt-3.5"
+                            >
+                                9:30–20:00
+                            </h4>
+                        </div>
+                        <div class="flex flex-col">
+                            <h3
+                                class="font-semibold text-2xl text-grayDark dark:text-white mt-3.5"
+                            >
+                                Jueves:
+                            </h3>
+                            <h4
+                                class="font-normal text-xl text-grayDark dark:text-white mt-3.5"
+                            >
+                                9:00–20:00
+                            </h4>
+                        </div>
+                        <div class="flex flex-col">
+                            <h3
+                                class="font-semibold text-2xl text-grayDark dark:text-white mt-3.5"
+                            >
+                                Viernes:
+                            </h3>
+                            <h4
+                                class="font-normal text-xl text-grayDark dark:text-white mt-3.5"
+                            >
+                                8:00–10:00
+                            </h4>
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </BigSection>
+        <BigSection class="">
+            <ContactForm client:load />
+        </BigSection>
+        <BigSection class="max-w-7xl">
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d869.5583307207921!2d-71.97879623740235!3d-13.52277689877764!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2spe!4v1737652554235!5m2!1ses-419!2spe"
+                width="100%"
+                height="450"
+                style="border:0;"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </BigSection>
+    </Layout>
+</>
