--- a/src/pages/sur-moi.astro
+++ b/src/pages/sur-moi.astro
@@ -5,7 +5,7 @@ import Background from "../components/Background.astro";
 import BigSection from "../components/BigSection.astro";
 import Header from "../components/Header.astro";
 import IconLink from "../components/IconLink.astro";
-import Testimonios from "../components/Testimonios.astro";
+import Testimonios from "../components/Testimonios";
 import Timeline from "../components/Timeline.astro";
 import Welcome from "../components/Welcome.astro";
 import Layout from "../layouts/Layout.astro";
@@ -58,7 +58,7 @@ const professionalData = [
 
 <!-- Titulo para el SEO -->
 <Layout>
-    <BigSection id="inicio" class="justify-between">
+    <BigSection id="inicio" class="justify-between max-w-7xl">
         <div class="grid grid-cols-2 gap-4">
             <div
                 class="flex flex-col items-center md:items-start text-center md:text-left space-y-6 max-w-lg"
@@ -103,7 +103,7 @@ const professionalData = [
             </div>
         </div>
     </BigSection>
-    <BigSection id="profesional" class="justify-center">
+    <BigSection id="profesional" class="justify-center max-w-7xl">
         <div class="grid grid-cols-2 gap-4">
             <Timeline items={academicData} />
             <Timeline items={professionalData} />
