--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,6 @@
 ---
 import ThemeToggle from "./ThemeToggle.astro";
+import WhatsappFloating from "./Whatsapp";
 
 const navItems = [
     {
@@ -72,16 +73,22 @@ const navItems = [
                     </a>
                 </div>
                 <ul class="w-100 overflow-auto flex flex-row items-center">
-                    {
-                        navItems.map((link) => (
-                            <a
-                                href={link.url}
-                                class="font-semibold w-100 max-w-fit min-w-fit relative block px-4 py-2 transition text-grayDark dark:text-white hover:text-yellowSecondary dark:hover:text-yellowSecondary"
-                            >
-                                {link.title}
-                            </a>
-                        ))
-                    }
+                    <li>
+                        <a
+                            href={"/"}
+                            class="font-semibold w-100 max-w-fit min-w-fit relative block px-4 py-2 transition text-grayDark dark:text-white hover:text-yellowSecondary dark:hover:text-yellowSecondary"
+                        >
+                            D'accueil
+                        </a>
+                    </li>
+                    <li>
+                        <a
+                            href={"/sur-moi"}
+                            class="font-semibold w-100 max-w-fit min-w-fit relative block px-4 py-2 transition text-grayDark dark:text-white hover:text-yellowSecondary dark:hover:text-yellowSecondary"
+                        >
+                            A propos de moi
+                        </a>
+                    </li>
                     <li>
                         <button
                             id="dropdownNavbarLink"
@@ -140,6 +147,14 @@ const navItems = [
                                 </li>
                             </ul>
                         </div>
+                    </li>
+                    <li>
+                        <a
+                            href={"/contactez"}
+                            class="font-semibold w-100 max-w-fit min-w-fit relative block px-4 py-2 transition text-grayDark dark:text-white hover:text-yellowSecondary dark:hover:text-yellowSecondary"
+                        >
+                            Contactez-nous
+                        </a>
                     </li>
                 </ul>
             </div>
