--- a/src/pages/contactez.astro
+++ b/src/pages/contactez.astro
@@ -126,7 +126,7 @@ import ClockIcon from "../../public/iconos/ClockIcon.astro";
         </BigSection>
         <BigSection class="max-w-7xl">
             <iframe
-                src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d869.5583307207921!2d-71.97879623740235!3d-13.52277689877764!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2spe!4v1737652554235!5m2!1ses-419!2spe"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1617.0147333876905!2d6.634916922991815!3d46.512249868722755!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x478c2fcbd13b2583%3A0x5b381032d9600af3!2sAv.%20de%20Jurigoz%2010%2C%201006%20Lausanne%2C%20Suiza!5e0!3m2!1ses-419!2spe!4v1737819906691!5m2!1ses-419!2spe"
                 width="100%"
                 height="450"
                 style="border:0;"
