--- a/src/pages/contactez.astro
+++ b/src/pages/contactez.astro
@@ -28,7 +28,7 @@ import ClockIcon from "../../public/iconos/ClockIcon.astro";
                     <h4
                         class="font-normal text-xl text-grayDark dark:text-white mt-3.5"
                     >
-                        Urb. Lusdicn sdoicj 546 - A
+                        Avenue Jurigoz 20b20 bis 1006, Lausanne
                     </h4>
                 </a>
                 <a
@@ -46,7 +46,7 @@ import ClockIcon from "../../public/iconos/ClockIcon.astro";
                     <h4
                         class="font-normal text-xl text-grayDark dark:text-white mt-3.5"
                     >
-                        999 999 999
+                        +41 79 298 93 56
                     </h4>
                 </a>
                 <a
