--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -142,7 +142,7 @@ const carouselData = [
 			<div class="grid grid-cols-1 md:grid-cols-2 gap-4">
 				<div class="flex justify-center items-center align-middle">
 					<img
-						src="/images/IMG_20210426_135106_937.jpg"
+						src="/images/banner_01_curvas.png"
 						alt="Perfil"
 						class="object-cover rounded-md px-12"
 					/>
