--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,13 +7,14 @@ import WhatsappFloating from "./Whatsapp";
 const socialLinks = [
     {
         icon: LinkedInIcon,
-        link: "https://www.linkedin.com",
+        link: "https://www.linkedin.com/in/dante-yepez-1a735371/",
     },
     {
         icon: InstagramIcon,
-        link: "https://www.instagram.com",
+        link: "https://www.instagram.com/espagnol_hispanocurso/?igshid=YmMyMTA2M2Y%3D",
     },
 ];
+const currentYear = new Date().getFullYear();
 ---
 
 <footer class="relative bg-blueGray-200 pt-8 pb-6">
@@ -100,7 +101,7 @@ const socialLinks = [
                 <div
                     class="text-sm text-brownDark dark:text-white font-semibold py-1"
                 >
-                    Hispano Curso 2024
+                    Hispano Curso {currentYear}
                 </div>
             </div>
         </div>
