--- a/src/pages/sur-moi.astro
+++ b/src/pages/sur-moi.astro
@@ -9,14 +9,15 @@ import Testimonios from "../components/Testimonios";
 import Timeline from "../components/Timeline.astro";
 import Welcome from "../components/Welcome.astro";
 import Layout from "../layouts/Layout.astro";
+import Testimonios from "../components/Testimonios";
 const socialLinks = [
     {
         icon: LinkedInIcon,
-        link: "https://www.linkedin.com",
+        link: "https://www.linkedin.com/in/dante-yepez-1a735371/",
     },
     {
         icon: InstagramIcon,
-        link: "https://www.instagram.com",
+        link: "https://www.instagram.com/espagnol_hispanocurso/?igshid=YmMyMTA2M2Y%3D",
     },
 ];
 const academicData = [
@@ -53,6 +54,158 @@ const professionalData = [
             },
         ],
     },
+];
+const carouselData = [
+	{
+		text: "Un grand merci, Dante, pour ces cours structurés et ludiques. Grâce à toi, j'ai pu réaliser mon projet de partir faire du volontariat au Pérou. J'ai pu communiquer et échanger avec les locaux et vivre une expérience unique et inoubliable.",
+		image: "/images/avatar.png",
+		name: "Anna",
+	},
+	{
+		text: "Dante est un excellent professeur. Il est patient, méthodique et plein d'humour. J'ai débuté sans aucunes connaissances en espagnol et maintenant je peux comprendre une conversation simple et répondre avec des bases solides. La salle est bien située et équipée. Merci Dante pour ce partage de connaissances",
+		image: "/images/avatar.png",
+		name: "Gisèle",
+	},
+	{
+		text: "Dante m’a fait progresser de manière spectaculaire tout en rendant le cours ludique, il insiste vraiment sur les verbes qui est la base fondamentale dans l’apprentissage de cette langue, je le recommande à 200%",
+		image: "/images/avatar.png",
+		name: "Davide M.",
+	},
+	{
+		text: "Dante m'a aidé a atteindre mes objectifs d'apprentissage en espanol. Il est patient et à l'écoute des besoins. Suivant un cours particulier a permis de participer à des discussions intéressantes au sujet de la culture et l'histoire de l'Amérique Latine. Merci beaucoup, Dante.",
+		image: "/images/avatar.png",
+		name: "	S. F.",
+	},
+	{
+		text: "Dante est un super prof d’espagnol, sympathique et patient. L’organisation des cours (particulier) se fait de manière simple et flexible. J’ai suivi un cours particulier avec Dante pour améliorer mes connaissances basiques de l’espagnol en vue d’un séjour professionnel en Colombie. L’approche dynamique de Dante et le grand focus sur les compétences orales m’ont permis de bien progresser lors de ma vingtaine d’heures de cours et je me sens prêt à vivre dans un milieu hispanophone. Muchas gracias por tu ayuda Dante!",
+		image: "/images/avatar.png",
+		name: "David S.",
+	},
+	{
+		text: "Les cours de Dante, que j'ai suivis pendant plusieurs années, ont toujours été intéressants et variés. J'ai non seulement acquis une bonne base en grammaire, mais j'ai aussi appris à m'exprimer avec bien plus d'aisance grâce à la conversation et l'écriture.",
+		image: "/images/avatar.png",
+		name: "Catherine M.",
+	},
+	{
+		text: "Dante s’adapte très bien à nos connaissances et nous explique longuement si on n’a pas compris quelque chose. A de la patience pour répéter les choses oubliées lorsqu’à un certain âge la mémoire a tendance à se reposer! Et toujours de bonne humeur.",
+		image: "/images/avatar.png",
+		name: "Arlette",
+	},
+	{
+		text: "Dante est un super prof qui sait s'adapter au niveau de l'élève, avec une métodologie simple et efficace. J'ai pu combler certaines lacunes avec des explications simples et claires sur les utilisations des temps des verbes et de certains mots. J'ai aussi beaucoup apprécié la partie conversation du cours. De plus les horaires sont flexibles et le prix défiant toute concurence. Je le recommande vivement !",
+		image: "/images/avatar.png",
+		name: "Françoise D.",
+	},
+	{
+		text: "Dante est un très bon professeur. En 2 ans de cours, je me sens très à l'aise en espagnol et je vais pouvoir communiquer avec les gens lors de mes prochains voyage. Gracias Dante por tus lecciones, estoy deseando hablar en Sudamérica.",
+		image: "/images/avatar.png",
+		name: "Mégane B.",
+	},
+	{
+		text: "Professeur à l'écoute, patient et très sympathique. Salla bien située avec l'arrêt de bus à côté Je recommande vivement Dante.",
+		image: "/images/avatar.png",
+		name: "Valérie P.",
+	},
+    {
+		text: "J'ai eu des cours super avec Dante - très efficaces, adapté, interactifs et amusants. Je recommande fortement les cours avec lui !",
+		image: "/images/avatar.png",
+		name: "Ebba",
+	},
+	{
+		text: "Surtout ne cherchez pas plus loin, vous l’avez trouvé. En effet, Dante a une capacité semblerait-il innée, à s’adapter à toutes vos questions linguistiques, quel que soit votre niveau et ce, de façon naturelle et toujours dans la bonne humeur. Il sait mettre à l’aise et je l’ai été tout au long de ces mois passés… avec en bonus l’amélioration de mon niveau d’espagnol. Une expérience que je renouvèlerai lorsque de nouvelles questions je me poserai. Merci Dante et au plaisir.",
+		image: "/images/avatar.png",
+		name: "Catherine H.",
+	},
+	{
+		text: "Dante Yépez ist ein hervorragender Sprachlehrer, der die spanische Sprache auch online, über Zoom, und für Deutschsprachige grossartig vermitteln kann. Der Unterricht ist auf Spanisch, wie es an Sprachschulen in spanischsprachigen Ländern gemacht wird. Dante geht auf den Schüler ein, erfasst Situationen und passt seinen Unterricht flexibel auf den Fortschritt und das Verständnis des Schülers an. So macht Spanisch lernen Spass! Konzentriert und dennoch immer mit einem Schuss Humor! Starke Empfehlung!",
+		image: "/images/avatar.png",
+		name: "Oliver M.",
+	},
+	{
+		text: "Ich habe den Onlinekurs besucht und war sehr zufrieden. Dante ist ein super Lehrer und es hat richtig Spass gemacht. Ich kann den Kurs nur weiterempfehlen und fühl mich nun sprachlich fit für meinen nächsten Spanienaufenthalt :-)",
+		image: "/images/avatar.png",
+		name: "	Mirjam G.",
+	},
+	{
+		text: "Super prof, s'adapte à ses élèves, très pédagogue, je ne peux que recommander Dante pour quiconque qui souhaite apprendre l'espagnol ! Les progrès se notent très rapidement grâce à sa méthode variée ! Très sympa et chaleureux en plus!",
+		image: "/images/avatar.png",
+		name: "Vanessa D. L.",
+	},
+	{
+		text: "Dante est un très bon professeur avec une bonne méthodologie qui sait s'adapter au niveau de son élève. J ai comble beaucoup de lacunes et j'ai fait de grand progrès en très peu de temps, autant à l'écrit qu'à l'oral Je le recommande vivement",
+		image: "/images/avatar.png",
+		name: "Avertin E.",
+	},
+	{
+		text: "Mejor profesor de Lausanne :-) Je prends maintenant des cours avec lui depuis 6 mois et je sens une nette amélioration. Je recommande donc vivement Dante !",
+		image: "/images/avatar.png",
+		name: "Guillaume D.",
+	},
+	{
+		text: "Dante est un professeur expérimenté, flexible, patient et motivant. C’est un bon pédagogue, ses cours sont structurés, un bon équilibre entre grammaire et conversation. Arrivée à la retraite, j’ai choisi d’apprendre l’espagnol pour mon plaisir. Après deux mois de cours individuel hebdomadaire, je poursuivrai cette expérience positive cet automne.",
+		image: "/images/avatar.png",
+		name: "Eliane G.",
+	},
+	{
+		text: "Très bon professeur. Super contact, très bonne pédagogie, j’ai beaucoup de plaisir à suivre ses cours et m’améliore de cours en cours.",
+		image: "/images/avatar.png",
+		name: "Caroline M.",
+	},
+	{
+		text: "Dante est un professeur formidable, qui aime transmettre. Nous apprenons vite et intelligemment. Nous recommandons vivement ses cours et la belle personne qu'il est.",
+		image: "/images/avatar.png",
+		name: "Katie E. P.",
+	},
+	{
+		text: "Dante est un prof génial. Il est compréhensif; il s'est adapté à mon rythme d'apprentissage et module ses cours pour que j'ai toujours l'impression d'avancer. Je recommande vivement ses cours, non seulement parce qu'il est gentil mais aussi parce que l'ambiance du cours est vraiment sympa, on ne se sent pas jugé, ni sur notre niveau, ni sur nos erreurs ou notre prononciation.",
+		image: "/images/avatar.png",
+		name: "Jehanne P.",
+	},
+	{
+		text: "Je ne peux que recommander Dante, c'est un professeur d'espagnol très professionnel, structuré, patient, flexible, motivant et toujours souriant ! J'ai beaucoup apprécié les cours que je vais certainement poursuivre cet automne.",
+		image: "/images/avatar.png",
+		name: "Corinne",
+	},
+	{
+		text: "Excellent prof, je suis ses cours depuis maintenant. Un rapport qualité prix imbattable",
+		image: "/images/avatar.png",
+		name: "Luca S.",
+	},
+	{
+		text: "Tout était très bien, après, il suffit de demander pour recevoir, exemples : d'avantage de devoirs, un vocabulaire spécifique, les temps des verbes, etc. L'espagnol étant sa langue maternelle, les cours ne peuvent qu'être bons pour qui sait étudier assidument. Très bon contact également. A recommander !",
+		image: "/images/avatar.png",
+		name: "Manuel B.",
+	},
+	{
+		text: "Excellent professeur! Très motivant, joyeux et gentil. j'ai pu faire des cours d'espagnol intensif de survie pendant 2 semaines avant de partir au Costa Rica. Il est allé directement au but et m'à enseigné ce qu'il fallait pour se débrouiller dans un pays hispanophone.",
+		image: "/images/avatar.png",
+		name: "Camille B.",
+	},
+	{
+		text: "Dante est un professeur dévoué et personnalisera le cours en fonction de vos attentes. Je progresse très rapidement grâce a lui. Je recommande vivement ce cours.",
+		image: "/images/avatar.png",
+		name: "Paul S.",
+	},
+	{
+		text: "Je recommande fortement Dante pour des cours d'espagnol! Il s'adapte à chaque élève, est toujours très souriant et a beaucoup de patience. Il sait ce qu'il faut travailler et dans quel ordre. Super prof, supers cours!",
+		image: "/images/avatar.png",
+		name: "Vanessa D. L.",
+	},
+	{
+		text: "Je suis très contente de mon cours express avec Dante. Je le recommande sans aucune hésitation !",
+		image: "/images/avatar.png",
+		name: "Aude C.",
+	},
+	{
+		text: "Dante sait s'adapter aux besoins particuliers de chacun et proposer des thèmes adéquats. Nous revenons d'un voyage en Amérique du Sud et nous avons pu nous débrouiller pour parler espagnol, respectivement comprendre, après trois mois de cours.",
+		image: "/images/avatar.png",
+		name: "Pascale J.",
+	},
+	{
+		text: "Excellentes Professor d'Espagnole",
+		image: "/images/avatar.png",
+		name: "Ssss",
+	},
 ];
 ---
 
@@ -96,7 +249,7 @@ const professionalData = [
             </div>
             <div class="relative flex-shrink-0 flex justify-center">
                 <img
-                    src="/images/175182536_802693567292708_31008254925110702.png"
+                    src="/images/Hispano_Curso_2.jpg"
                     alt="Perfil"
                     class="w-96 h-auto object-cover img-instructor"
                 />
@@ -109,4 +262,7 @@ const professionalData = [
             <Timeline items={professionalData} />
         </div>
     </BigSection>
+    <BigSection class="max-w-7xl">
+		<Testimonios items={carouselData} client:load />
+	</BigSection>
 </Layout>
