--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -24,6 +24,7 @@ const navItems = [
 
 <header
     class="fixed top-0 z-10 flex flex-col md:flex-row items-center justify-center w-full mt-2 p-2 md:p-3 mx-auto"
+    style="z-index: 999"
 >
     <nav
         class="flex justify-center items-center bg-white border-gray-200 dark:bg-gray-900 dark:border-gray-700 rounded-full"
@@ -158,7 +159,7 @@ const navItems = [
                     </li>
                 </ul>
             </div>
-            <ThemeToggle />
+            
         </div>
     </nav>
 </header>
@@ -220,7 +221,7 @@ const navItems = [
 
     @keyframes nav-shadown {
         0% {
-            @apply dark:bg-gray-800/0 bg-white/50;
+            @apply dark:bg-gray-800/0 bg-white/100;
         }
         to {
             @apply shadow-lg ring-1 backdrop-blur ring-white/10;
